fix restriction list not working on smaller screens

--- a/components/Flipper/FlipRestrictionList/FlipRestrictionList.module.css
+++ b/components/Flipper/FlipRestrictionList/FlipRestrictionList.module.css
@@ -1,6 +1,20 @@
 .restrictionList {
     flex: 1 1 auto;
     overflow-y: auto;
+    min-height: 200px;
+}
+
+.restrictionListContainer{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
+}
+
+@media all and (max-height: 1000px) {
+    .restrictionListContainer {
+        overflow-y: auto;
+    }
 }
 
 .restrictionContainer {
